entities/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice-resources-ingress
  namespace: ${NAMESPACE@microservice-config}
  labels:
    moduleid: microservice-resources-realm
    version: 1.70.0-master
    last_updated: CHANGE_TO_UNIXTS
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/rewrite-target: ${RESOURCES_EXTERNAL_PATH}/$2
    nginx.ingress.kubernetes.io/upstream-vhost: ${RESOURCES_EXTERNAL_DOMAIN}
spec:
  tls:
    - hosts:
        - ${HOST@microservice-config}
      secretName: certificates-secret
  rules:
    - host: ${HOST@microservice-config}
      http:
        paths:
          - path: ${WEB_BASE_ROUTE@microservice-resources-config}(/|$)(.*)
            backend:
              serviceName: ${RESOURCES_SERVICE_NAME}
              servicePort: ${RESOURCES_SERVICE_PORT}
